@@ -1,22 +1,18 @@
 package ru.kappers.service;
 
-import com.github.springtestdbunit.DbUnitTestExecutionListener;
 import com.github.springtestdbunit.annotation.DatabaseSetup;
 import com.google.common.collect.ImmutableMap;
 import lombok.extern.slf4j.Slf4j;
+import org.assertj.core.api.RecursiveComparisonAssert;
 import org.joda.money.CurrencyUnit;
 import org.joda.money.Money;
 import org.junit.Before;
+import org.junit.Ignore;
 import org.junit.Test;
-import org.junit.runner.RunWith;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.test.context.ActiveProfiles;
-import org.springframework.test.context.ContextConfiguration;
-import org.springframework.test.context.TestExecutionListeners;
-import org.springframework.test.context.junit4.AbstractTransactionalJUnit4SpringContextTests;
-import org.springframework.test.context.junit4.SpringRunner;
-import ru.kappers.KappersApplication;
+import org.springframework.jdbc.core.JdbcTemplate;
+import ru.kappers.AbstractIntegrationTest;
+import ru.kappers.assertion.Assertions;
 import ru.kappers.model.KapperInfo;
 import ru.kappers.model.Role;
 import ru.kappers.model.User;
@@ -27,28 +23,27 @@ import java.math.BigDecimal;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.LocalTime;
-import java.util.*;
-import java.util.stream.Collectors;
+import java.util.List;
+import java.util.Map;
 
-import static org.junit.Assert.*;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.springframework.test.jdbc.JdbcTestUtils.deleteFromTables;
 
+//todo Похоже что наследники AbstractIntegrationTest пока падают, причем не падают тесты только первого в очереди выполнения класса. Cтоит наследовать от AbstractDatabaseTest (уже 3 есть класса)
+//todo Возможно, стоит скопировать конфиг из KapperInfoServiceImplTest
 @Slf4j
-@ActiveProfiles("test")
-@ContextConfiguration
-@RunWith(SpringRunner.class)
-@SpringBootTest(classes = {KappersApplication.class})
-@TestExecutionListeners({DbUnitTestExecutionListener.class})
 @DatabaseSetup("/data/UserServiceImplTest-users.xml")
-public class UserServiceImplTest extends AbstractTransactionalJUnit4SpringContextTests {
-
+public class UserServiceImplTest extends AbstractIntegrationTest {
     @Autowired
     private UserService userService;
     @Autowired
     private UsersRepository usersRepository;
     @Autowired
     private RolesService rolesService;
+    @Autowired
+    private JdbcTemplate jdbcTemplate;
 
-    private User admin = User.builder()
+    private final User admin = User.builder()
             .userName("admin")
             .name("админ")
             .password("asasdgfas")
@@ -57,7 +52,7 @@ public class UserServiceImplTest extends AbstractTransactionalJUnit4SpringContex
             .lang("RUSSIAN")
             .balance(Money.of(CurrencyUnit.EUR, new BigDecimal("10.00")))
             .build();
-    private User user = User.builder()
+    private final User user = User.builder()
             .userName("user")
             .name("юзер")
             .password("assaasas")
@@ -66,7 +61,7 @@ public class UserServiceImplTest extends AbstractTransactionalJUnit4SpringContex
             .lang("RUSSIAN")
             .balance(Money.of(CurrencyUnit.USD, new BigDecimal("10.00")))
             .build();
-    private User kapper = User.builder()
+    private final User kapper = User.builder()
             .userName("kapper")
             .name("каппер")
             .password("assaasas")
@@ -84,6 +79,10 @@ public class UserServiceImplTest extends AbstractTransactionalJUnit4SpringContex
 
     @Before
     public void setUp() {
+        updateRolesIfEmpty();
+    }
+
+    private void updateRolesIfEmpty() {
         userRoleNameMap.entrySet().stream()
                 .filter(it -> it.getKey().getRole() == null)
                 .forEach(it -> it.getKey().setRole(rolesService.getByName(it.getValue())));
@@ -92,131 +91,142 @@ public class UserServiceImplTest extends AbstractTransactionalJUnit4SpringContex
 
     @Test
     public void addUsers() {
-        deleteFromTables("users");
-        User userA = userService.addUser(admin);
-        User userU = userService.addUser(user);
-        User userK = userService.addUser(kapper);
-        assertEquals(userA, admin);
-        assertEquals(userU, user);
-        assertEquals(userK, kapper);
-        assertNotNull(userK.getKapperInfo());
+        deleteFromTables(jdbcTemplate,"users");
+        User adminUser = userService.addUser(admin);
+        User user = userService.addUser(this.user);
+        User kapperUser = userService.addUser(kapper);
+        assertWithRecursiveComparison(adminUser)
+                .isEqualTo(admin);
+        assertWithRecursiveComparison(user)
+                .isEqualTo(this.user);
+        assertWithRecursiveComparison(kapperUser)
+                .isEqualTo(kapper);
+        assertThat(user.getKapperInfo()).isNull();
+        assertThat(kapperUser.getKapperInfo()).isNotNull();
+    }
+
+    private RecursiveComparisonAssert<?> assertWithRecursiveComparison(User actualUser) {
+        return assertThat(actualUser).usingRecursiveComparison();
     }
 
     @Test
     public void deleteUser() {
         final String userName = user.getUserName();
         userService.delete(usersRepository.getByUserName(userName));
-        assertNull(usersRepository.getByUserName(userName));
+        assertThat(usersRepository.getByUserName(userName)).isNull();
     }
 
     @Test
     public void getByUserName() {
-        User user1 = userService.getByUserName("kapper");
-        log.info(user1.toString());
-        assertNotNull(user1);
-        assertEquals(user1.getUserName(), kapper.getUserName());
-        assertNotEquals(user1, user);
-        assertNotEquals(user1, admin);
+        User kapperUser = userService.getByUserName("kapper");
+        log.info(kapperUser.toString());
+        Assertions.assertThat(kapperUser).isNotNull()
+                .isNotEqualTo(user)
+                .isNotEqualTo(admin)
+                .hasUserName(kapper.getUserName());
     }
 
     @Test
     public void getByName() {
         userService.addUser(admin);
-        User user1 = userService.getByName("админ");
-        assertNotNull(user1);
-        assertNotEquals(user1, kapper);
-        assertNotEquals(user1, user);
-        assertEquals(user1.getUserName(), admin.getUserName());
-        userService.delete(admin);
+        User adminUser = userService.getByName("админ");
+        Assertions.assertThat(adminUser).isNotNull()
+                .isNotEqualTo(kapper)
+                .isNotEqualTo(user)
+                .hasUserName(admin.getUserName());
     }
 
     @Test
     public void editUser() {
         final String adminUserName = "admin";
-        User user1 = userService.getByUserName(adminUserName);
-        String curr = user1.getEmail();
-        assertNotNull(user1);
-        user1.setEmail("qwe1as@asas.ru");
-        userService.editUser(user1);
-        user1 = userService.getByUserName(adminUserName);
-        assertNotEquals(curr, user1.getEmail());
+        User adminUser = userService.getByUserName(adminUserName);
+        String email = adminUser.getEmail();
+        adminUser.setEmail("qwe1as@asas.ru");
+        userService.editUser(adminUser);
+        adminUser = userService.getByUserName(adminUserName);
+        Assertions.assertThat(adminUser)
+                .hasNoEmail(email);
     }
 
     @Test
     public void getAll() {
         List<String> all = userService.getAll().stream()
                 .map(User::getUserName)
-                .collect(Collectors.toList());
-        assertTrue(all.contains(admin.getUserName()));
-        assertTrue(all.contains(user.getUserName()));
-        assertTrue(all.contains(kapper.getUserName()));
+                .toList();
+        assertThat(all)
+                .contains(admin.getUserName(), user.getUserName(), kapper.getUserName());
     }
 
     @Test
     public void getAllByRole() {
         List<User> admins = userService.getAllByRole(Role.Names.ADMIN);
-        assertNotNull(admins);
-        assertNotEquals(0, admins.size());
-        assertTrue(admins.stream()
-                .map(User::getUserName)
-                .collect(Collectors.toList())
-                .contains(admin.getUserName()));
+        assertThat(admins).isNotNull()
+                .isNotEmpty()
+                .flatExtracting(User::getUserName)
+                .contains(admin.getUserName());
     }
 
     @Test
     public void hasRole() {
-        User userU = userService.getByUserName(user.getUserName());
-        User userK = userService.getByUserName(kapper.getUserName());
-        assertTrue(userService.hasRole(userK, Role.Names.KAPPER));
-        assertFalse(userService.hasRole(userU, Role.Names.KAPPER));
-        assertFalse(userService.hasRole(userK, Role.Names.ADMIN));
-        assertTrue(userService.hasRole(userU, rolesService.getRoleIdByName(Role.Names.USER)));
-        assertTrue(userService.hasRole(userU, rolesService.getByName(Role.Names.USER)));
-        assertTrue(userService.hasRole(userU, rolesService.getById(2)));
-        assertEquals(userK.getRole(), rolesService.getByName(Role.Names.KAPPER));
+        User uUser = userService.getByUserName(user.getUserName());
+        User kapperUser = userService.getByUserName(kapper.getUserName());
+        assertThat(userService.hasRole(kapperUser, Role.Names.KAPPER)).isTrue();
+        assertThat(userService.hasRole(uUser, Role.Names.KAPPER)).isFalse();
+        assertThat(userService.hasRole(kapperUser, Role.Names.ADMIN)).isFalse();
+        assertThat(userService.hasRole(uUser, rolesService.getRoleIdByName(Role.Names.USER))).isTrue();
+        assertThat(userService.hasRole(uUser, rolesService.getByName(Role.Names.USER))).isTrue();
+        assertThat(userService.hasRole(uUser, rolesService.getById(2))).isTrue();
+        Assertions.assertThat(kapperUser)
+                .hasRole(rolesService.getByName(Role.Names.KAPPER));
     }
 
     @Test
     public void getRole() {
-        User userK = userService.getByUserName(kapper.getUserName());
-        assertNotNull(userK);
-        Role role = userService.getRole(userK);
-        assertNotNull(role);
-        assertEquals(role.getName(), Role.Names.KAPPER);
+        User kapperUser = userService.getByUserName(kapper.getUserName());
+        Assertions.assertThat(kapperUser).isNotNull();
+        Role role = userService.getRole(kapperUser);
+        Assertions.assertThat(role).isNotNull()
+                .hasName(Role.Names.KAPPER);
     }
 
     @Test
+    @Ignore("реализовать тест")
     public void getHistory() {
-        //TODO
+        //TODO реализовать тест
     }
 
     @Test
+    @Ignore("реализовать тест")
     public void getStat() {
-        //TODO
+        //TODO реализовать тест
     }
 
     @Test
     public void getKapperInfo() {
-        User kapp = userService.getByUserName("kapper");
-        userService.addUser(kapp);
-        KapperInfo kapperInfo = kapp.getKapperInfo();
-        assertNotNull(kapperInfo);
+        User kapperUser = userService.getByUserName("kapper");
+        kapperUser = userService.addUser(kapperUser);
+        KapperInfo kapperInfo = kapperUser.getKapperInfo();
+        assertThat(kapperInfo).isNotNull();
+
         User user = userService.getByUserName("user");
         KapperInfo userInfo = user.getKapperInfo();
-        assertNull(userInfo);
+        assertThat(userInfo).isNull();
     }
 
     @Test
+    @Ignore("реализовать тест")
     public void getInfo() {
-        //TODO
+        //TODO реализовать тест
     }
 
 
     @Test
+    @Ignore("реализовать тест")
     public void transfer() {
+        //TODO реализовать тест
     }
 
-/*
+    /*
 * Ниже фрагмент кода закомментирован для отключения взаимодействия с блокчейном на период разработки.
 * */
 
